--- a/booking-page.html
+++ b/booking-page.html
@@ -5,11 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flyttstädning Stockholm</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body class="booking-body">
     <header>
-        <nav class="navbar">
-            <img id="logo" src="./images/logo.gif" alt="logo">
+        <nav class="navbar" id="nav">
+
+            <div class="nav-info-container centered">
+                <a href="index.html" class="nav-logo-link"><img id="logo" src="./images/logo.gif" alt="logo"></a>
+
+                <div class="nav-info-block" onClick="scrollToElement('footer');">
+                    <img src="images/map.png" alt="map icon">
+                    <span>Franzéngatan 30,<br>112 16 Stockholm</span>
+                </div>
+
+                <div class="nav-info-block" onClick="scrollToElement('footer');">
+                    <img src="images/time.png" alt="clock icon">
+                    <span>Mån - Sön:<br>08:00 - 17:00</span>
+                </div>
+
+                <a href="tel:+010 58 558 08">
+                    <div class="nav-info-block">
+                        <img src="images/phone-call.png" alt="phone icon">
+                        <span>Ring nu:<br>010 58 558 08</span>
+                    </div>
+                </a>
+            </div>
+<!-- 
             <div class="menu-icon" id="menu-icon">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -22,15 +46,15 @@
                 <li><a href="checklist.html">Checklista</a></li>
                 <li><a href="contact.html">Kontakta Oss</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 
+    <div id="nav-scroll"></div>
     <img src="./images/cleaningbg3.jpg" alt="cleaning service" class="background-image">
 
-    <div class="boooking-container">
+    <div class="booking-container">
         <div class="contact-inner-container">
-            <h1>Boka Flyttstädning Tullinge</h1>
-            <p class="quote-container"><span class="quote-line"></span>"Ju mer du skulle fundera på att anlita en annan städfirma, desto mer kommer du inse varför du ska anlita oss"</p>
+            <h1>SKRÄDDARSY DIN FLYTTSTÄDNING</h1>
         </div>
 
         <div class="form-container">
@@ -48,7 +72,7 @@
                     </div>
                     
                     <div class="benefits-section">
-                        <h2 class="form-h2">Fördelar med flyttstädning</h2>
+                        <h2 id="" class="form-h2" >Fördelar med flyttstädning</h2>
                         <ul>
                             <li><span class="checkmark-2">✔</span> Just nu bjuder vi på fönsterputs när du bokar flyttstäd.</li>
                             <li><span class="checkmark-2">✔</span> Kostnadsfri avbokning upp till 10 dagar innan.</li>
@@ -67,53 +91,14 @@
                 <div class="form-section">
                     <div id="" class="booking_form">
                         <div id="iframe-container">
-                            <iframe id="fs_frame_15" src="https://www.formsolutions.se/forms/view/15" scrolling="no" style="overflow: hidden; height: 570px; width:400px; border:none;"></iframe>
+                            <p class="quote-container"><span class="quote-line"></span>"Ju mer du skulle fundera på att anlita en annan städfirma, desto mer kommer du inse varför du ska anlita oss"</p>
+                            <iframe id="fs_frame_15" src="https://www.formsolutions.se/forms/view/4" scrolling="no" style="overflow: hidden; height: 570px; width:400px; border:none;"></iframe>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <footer>
-        <div class="footer-container centered-section">
-            <h2>Med Flyttstädning Stockholm™ är din bostad i trygga händer.</h2>
-            <!-- MAPS -->
-            <div class="map-container">
-                <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345093666!2d144.95373631531697!3d-37.816279779751554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf5779a74ee620c1!2sMelbourne%20VIC%2C%20Australia!5e0!3m2!1sen!2sus!4v1602314217045!5m2!1sen!2sus" 
-                width="100%" 
-                height="100%" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy">
-            </iframe>
-            </div>
-            <div class="footer-inner-container">
-                <div class="footer-text-section paragraph-2tv2o3MU1B text-output cparagraph-2tv2o3MU1B none noBorder radius0 none" data-animation-class=""><div><h2><strong><br>Flyttstädning<br>Stockholm™</strong></h2></div></div>
-
-                <div class="footer-text-section">
-                    <h3>Kontakta Oss:</h3>
-                    <p><strong>Alla dagar:</strong> 08:00 - 17:00</p>
-                    <p><strong>Ring:</strong> 0105855800</p>
-                    <p><strong>Övrig tid:</strong> kontaktformulär</p>
-                    <p>Vi svarar snarast möjligt inom 24 timmar</p>
-                </div>
-                <div class="footer-text-section">
-                    <h3>Intregritets Policy</h3>
-                    <p class="orange-color">GDPR</p>
-                    <p class="orange-color">Intregritets Policy</p>
-                    <p class="orange-color">Avtal &/ Villkor</p>
-                </div>
-                <div class="footer-text-section">
-                    <h3>Om Oss</h3>
-                    <p><strong>Vi är din pålitliga partner för professionella flytt och städtjänster.</strong></p>
-                    <p>Med huvudkontor i Stockholm sträcker våra städtjänster sig över flera orter i hela Stor-Stockholm med omnejd.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
     <script src="functions.js"></script>
 </body>
 </html>
