--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body class="booking-body">
     <header>
         <nav class="navbar">
-            <img id="logo" src="./images/logo.gif" alt="logo">
+            <img onClick="scrollToElement('nav-scroll');" id="logo" src="./images/logo.gif" alt="logo">
             <div class="menu-icon" id="menu-icon">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -24,6 +24,7 @@
             </ul>
         </nav>
     </header>
+    <div id="nav-scroll"></div>
 
     <img src="./images/cleaningbg3.jpg" alt="cleaning service" class="background-image">
 
@@ -33,10 +34,10 @@
 
             <div class="contact-inner-container">
                 <img class="big-icon" src="./images/cleaning.png" alt="cleaning">
-                <h1><strong>Kontakta oss</strong></h1>
+                <h1><strong>KONTAKTA OSS</strong></h1>
                 
                 <p><strong>Telefon 08:00 - 17:00 <br>
-                <a style="color:white; text-decoration: underline;" href="tel:0105855801">0105855801</a></strong></p>
+                <a style="color:#81E546; font-size:24px;" href="tel:0105855801">0105855801</a></strong></p>
                             
                 <p><span style="color: #000;">Övrig tid: Fyll i formuläret nedan</span> <br>
                 <strong><span style="color: #81E546;">Vill du boka flyttstädning?</span><br>
@@ -65,7 +66,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer id="footer">
         <div class="footer-container centered-section">
             <h2>Med Flyttstädning Stockholm™ är din bostad i trygga händer.</h2>
             <!-- MAPS -->
@@ -84,22 +85,29 @@
 
                 <div class="footer-text-section">
                     <h3>Kontakta Oss:</h3>
-                    <p><strong>Alla dagar:</strong> 08:00 - 17:00</p>
-                    <p><strong>Ring:</strong> 0105855800</p>
-                    <p><strong>Övrig tid:</strong> kontaktformulär</p>
+                    <p><strong class="blue-color">Alla dagar:</strong> 08:00 - 17:00</p>
+                    <p><strong class="blue-color">Ring:</strong> 0105855800</p>
+                    <p><strong class="blue-color">Övrig tid:</strong> kontaktformulär</p>
                     <p>Vi svarar snarast möjligt inom 24 timmar</p>
                 </div>
                 <div class="footer-text-section">
                     <h3>Intregritets Policy</h3>
-                    <p class="orange-color">GDPR</p>
-                    <p class="orange-color">Intregritets Policy</p>
-                    <p class="orange-color">Avtal &/ Villkor</p>
+                    <p class="blue-color">GDPR</p>
+                    <p class="blue-color">Intregritets Policy</p>
+                    <p class="blue-color">Avtal &/ Villkor</p>
                 </div>
                 <div class="footer-text-section">
                     <h3>Om Oss</h3>
-                    <p><strong>Vi är din pålitliga partner för professionella flytt och städtjänster.</strong></p>
+                    <p><strong class="blue-color">Vi är din pålitliga partner för professionella flytt och städtjänster.</strong></p>
                     <p>Med huvudkontor i Stockholm sträcker våra städtjänster sig över flera orter i hela Stor-Stockholm med omnejd.</p>
                 </div>
+            </div>
+
+            <div class="footer-bottom-container">
+                <p>
+                    © 2024 Flyttstädning Partner™ <br>
+                    Orgnr: 559020-5133. Alla rättigheter förbehållna.
+                </p>
             </div>
         </div>
     </footer>
