--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="nav-links" id="nav-menu">
                 <li><a href="index.html">Hem</a></li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="booking-page.html">Priser / Boka Online</a>
+                    <a class="dropbtn">Priser / Boka Online</a>
                     <ul class="dropdown-content">
                         <li><a href="booking.html">Flytthjälp</a></li>
                         <li><a href="booking-page.html">Flyttstädning</a></li>
