--- a/whyus2.html
+++ b/whyus2.html
@@ -36,7 +36,7 @@
     </header>
 
     <div id="nav-scroll"></div>
-    <img src="https://uploads.staticjw.com/tr/trappstadningistockholm/cleaning.jpg" alt="cleaning service" class="background-image" loading="lazy">
+    <img src="./images/cleaningbg3.jpg" alt="cleaning service" class="background-image" loading="lazy">
 
 
     <div class="prices-container">
@@ -48,13 +48,13 @@
                 <p>Vi ska garantera ett väl utfört arbete och därför ska vi kostnadsfritt rätta till en eventuell brist som beror på oss.</p>
             </div>
             <div class="image-content">
-                <img src="https://uploads.staticjw.com/tr/trappstadningistockholm/why-us.jpg" alt="Cleaning Service" loading="lazy">
+                <img src="./images/why-us.jpg" alt="Cleaning Service" loading="lazy">
             </div>
         </section>
 
         <section class="benefits">
             <div class="image-content">
-                <img src="https://uploads.staticjw.com/tr/trappstadningistockholm/why-us-2.jpg" alt="Benefit Image" loading="lazy">
+                <img src="./images/why-us-2.jpg" alt="Benefit Image" loading="lazy">
             </div>
             <div class="text-content">
                 <h2 style="margin-left:0;">Vi är det självklara valet</h2>
@@ -80,11 +80,11 @@
                 <p>Vi tar på oss alla typer av städuppdrag åt både privatpersoner och företag. Detta kan vara allt från trapp och företagsstädning till hemstädning och flyttstädning. Vi tar även på oss flyttuppdrag av privatpersoner samt företagsflyttar eller liknande.</p>
                 <p>Läs vår blogg</p>
                 <div class="button-container">
-                    <a class="sub-button" href="#">Boka din flyttstädning nu<img class="btn-arrow" src="https://uploads.staticjw.com/tr/trappstadningistockholm/arrow.webp" alt="right arrow" loading="lazy"></a>
+                    <a class="sub-button" href="#">Boka din flyttstädning nu<img class="btn-arrow" src="./images/arrow.png" alt="right arrow" loading="lazy"></a>
                 </div>
             </div>
             <div class="image-content">
-                <img src="https://uploads.staticjw.com/tr/trappstadningistockholm/why-us.jpg" alt="Cleaning Service" loading="lazy">
+                <img src="./images/why-us.jpg" alt="Cleaning Service" loading="lazy">
             </div>
         </section>
     </div>
